--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^16.18.60",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "chess.js": "^1.0.0-beta.6",
+    "chess.ts": "^0.16.2",
     "react": "^18.2.0",
+    "react-chessboard": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "stockfish": "^16.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
